2005-12-18 [colin] 1.19

	* Add gettext support and fr.po

2005-12-15 [paul] 1.18

	* Add plugin_version()

2005-12-12 [colin] 1.17

	* Fix a leak and refresh of webcal subscriptions
	
2005-12-12 [colin] 1.16

	* Fix a leak
	
2005-12-07 [colin] 1.15

	* Add plugin_licence()
	  Allow flags changing
	
2006-11-28 [colin] 1.14

	* src/vcalendar.c
		Trim labels

2006-11-25 [colin] 1.13

	* src/vcal_folder.c
		Thread network operations so they aren't
		blocking
	* src/vcalendar.c
		Fix cancellation of events
		Fix "answers to an unknown meeting proposal" 
		when we have an attendee and no local event

2006-11-23 [colin] 1.12

	* src/vcal_folder.c
		Fix items sensitivity
	* m4/curl.m4		** REMOVED **
	* configure.ac
		Move the curl m4 definition inside 
		configure.ac (crappy fix against a strange
		problem)

2006-11-17 [colin] 1.11

	* src/vcal_folder.c
		Fix fixme
	* src/vcal_meeting_gtk.c
		Fix exporting when local calendar 
		is empty

2006-11-17 [colin] 1.10

	* src/vcal_folder.c
		Tell libcurl to follow redirections

2006-11-17 [colin] 1.9

	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Fix a few leaks
		Add URL property handling
		Add webcal subscription	

2006-10-05 [colin] 1.8

	* src/vcalendar.c
		reflect API change

2005-09-12 [colin] 1.7
	
	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		fix trying to send to nobody
		fix updating of the folder after sending a meeting
		fix account selection when we have nntp accounts
		fix clearing of the mimeview

2005-07-17 [paul] 1.6

	* src/vcalendar.c
	* src/vcal_meeting_gtk.c
		update for changes to alertpanels

2005-07-15 [paul] 1.5

	fix build errors (thanks to Colin)

2005-07-04 [colin] 1.4

	Ship with libical.
	Change the date selection widgets to use a GtkCalendar.

2005-03-23 [colin] 1.3

	Check for libical version. Thanks to Alfons for
	the auto* voodoo!

2005-03-21 [colin] 1.2
